# ugu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  examples.cc  imgui.ini  mesh_test.cc  minimum_example.cc  reconfigure.bat  renderer_test.cc  sfs_test.cc  test_adjacency.cc  test_geodesic.cc  test_image.cc  test_inflation.cc  test_inpaint.cc  test_renderer_realtime.cc  test_stereo.cc  test_synthesis.cc  test_texturing.cc
.github/workflows/: cmake.yml
app/: gif3d.cc  image3d.cc  point2mesh.cc  posmap_gen.cc  posmap_recon.cc  textrans.cc  vc2tex.cc
app_gui/mesh_viewer/: main.cc
data/: make_gif.py
data/blendshape/: sphere.mtl
data/cylinder/: boundary.txt  cylinder.mtl
data/face/: boundary.txt  mediapipe_face_landmarks.json  mediapipe_face_landmarks_8.txt
data/face/lpshead/: README.txt  head_triangulated.obj.mtl  head_triangulated_landmarks.json  head_triangulated_landmarks_8.txt
data/gif/: README.md
data/plane/: plane.mtl
data/spot/: spot.mtl  spot_remesh.mtl
data/synthesis/: README.md
examples/: ex01_mesh.cc  ex02_renderer.cc  ex03_sfs.cc  ex04_adjacency.cc  ex05_geodesic.cc  ex06_image.cc  ex07_inflation.cc  ex08_inpaint.cc  ex09_renderer_realtime.cc  ex10_stereo.cc  ex11_synthesis.cc  ex12_texturing.cc  ex13_clustering.cc  ex14_thread.cc  ex15_optimizer.cc  ex16_textrans.cc  ex17_kdtree.cc  ex18_bvh.cc  ex19_parameterize.cc  ex20_manifold.cc  ex21_fusion.cc  ex22_line.cc  ex23_registration.cc  ex23_rigid.cc  ex24_nonrigid.cc  ex25_superpixel.cc  ex26_poisson_recon.cc  ex27_math.cc  ex28_curvature.cc  ex29_editing.cc
gui_app/: imgui_test.cc
gui_app/imgui_test/: frag.glsl  main.cc  vert.glsl
include/: camera.h  common.h  cpu_renderer.h  image.h  log.h  mesh.h  pixel_shader.h  pose.h  public_header.h  renderer.h
include/currender/: camera.h  common.h  image.h  log.h  mesh.h  rasterizer.h  raytracer.h  renderer.h  util.h
include/ugu/: camera.h  common.h  eigen_util.h  face_adjacency.h  image.h  image_io.h  image_proc.h  line.h  log.h  mesh.h  plane.h  point.h  raytracer.h  rect.h  renderable_mesh.h  renderer.h  timer.h  util.h
include/ugu/accel/: bvh.h  bvh_base.h  bvh_naive.h  bvh_nanort.h  kdtree.h  kdtree_base.h  kdtree_naive.h  kdtree_nanoflann.h
include/ugu/clustering/: clustering.h
include/ugu/correspondence/: correspondence_finder.h
include/ugu/cuda/: sparse.h
include/ugu/curvature/: curvature.h
include/ugu/decimation/: decimation.h
include/ugu/discrete/: bin_packer_2d.h
include/ugu/editing/: poisson_mesh_editing.h
include/ugu/geodesic/: geodesic.cc  geodesic.h
include/ugu/inflation/: inflation.cc  inflation.h
include/ugu/inpaint/: inpaint.cc  inpaint.h
include/ugu/kdtree/: kdtree.h
include/ugu/optimizer/: optimizer.h
include/ugu/parameterize/: parameterize.h
include/ugu/registration/: nonrigid.h  registration.h  rigid.h
include/ugu/renderer/: base.h  pixel_shader.h  rasterizer.cc  rasterizer.h  raytracer.cc  raytracer.h  util_private.cc  util_private.h
include/ugu/renderer/cpu/: rasterizer.h  raytracer.h  renderer.h  util_private.h
include/ugu/renderer/gl/: renderer.h
include/ugu/sfs/: marching_cubes.cc  marching_cubes.h  marching_cubes_lut.cc  marching_cubes_lut.h  voxel_carver.cc  voxel_carver.h
include/ugu/shader/: shader.h
include/ugu/stereo/: base.cc  base.h  patchmatch_stereo_impl.h  sgm_impl.h
include/ugu/superpixel/: superpixel.h
include/ugu/synthesis/: bdsim.cc  bdsim.h
include/ugu/textrans/: correspondence_finder.h  texture_transfer.h
include/ugu/texturing/: bin_packer_2d.cc  bin_packer_2d.h  texture_mapper.cc  texture_mapper.h  vertex_colorizer.cc  vertex_colorizer.h  visibility_tester.cc  visibility_tester.h
include/ugu/util/: camera_util.h  geom_util.h  image_util.h  io_util.h  math_util.h  path_util.h  raster_util.h  rgbd_util.h  string_util.h  thread_util.h
include/ugu/voxel/: extract_voxel.h  marching_cubes.h  marching_cubes_lut.h  voxel.h
pc/: main.cc  main.cpp
script/: glsl2header.py
src/: camera.cc  camera.cpp  common.cc  cpu_renderer.cpp  gltf.h  image.cc  image.cpp  image_io.cc  image_proc.cc  line.cc  log.cc  mesh.cc  mesh.cpp  pixel_shader.cc  pixel_shader.h  plane.cc  point.cc  pose.cc  pose.cpp  private_lib.cpp  public_lib.cpp  rasterizer.cc  raytracer.cc  renderable_mesh.cc  renderer.cc  renderer.cpp  stb.cc  timer.h  ugu_stb.h  util.cc  util_private.cc  util_private.h
src/clustering/: clustering.cc
src/correspondence/: correspondence_finder.cc
src/cuda/: sparse.cc
src/currender/: camera.cc  image.cc  log.cc  mesh.cc  pixel_shader.cc  pixel_shader.h  rasterizer.cc  raytracer.cc  renderer.cc  stb.cc  util.cc  util_private.cc  util_private.h
src/curvature/: curvature.cc
src/decimation/: decimation.cc
src/discrete/: bin_packer_2d.cc
src/editing/: poisson_mesh_editing.cc
src/geodesic/: geodesic.cc
src/include/: private_header.h
src/inflation/: inflation.cc
src/inpaint/: inpaint.cc
src/optimizer/: optimizer.cc
src/parameterize/: parameterize.cc
src/registration/: nonrigid.cc  registration.cc  rigid.cc
src/renderer/: rasterizer.cc  raytracer.cc
src/renderer/cpu/: rasterizer.cc  raytracer.cc  util_private.cc
src/renderer/gl/: renderer.cc
src/sfs/: extract_voxel.cc  marching_cubes.cc  voxel_carver.cc
src/shader/: frag.h  geo.h  geom.h  shader.cc  vert.h
src/shader/glsl/frag/: deferred.frag  gbuf.frag  (+1 more)
src/stereo/: base.cc  patchmatch_stereo_impl.h
src/superpixel/: superpixel.cc
src/synthesis/: bdsim.cc
src/textrans/: correspondence_finder.cc  texture_transfer.cc
src/texturing/: bin_packer_2d.cc  texture_mapper.cc  vertex_colorizer.cc  visibility_tester.cc
src/util/: camera_util.cc  geom_util.cc  image_util.cc  io_util.cc  math_util.cc  path_util.cc  raster_util.cc  rgbd_util.cc  string_util.cc  thread_util.cc
src/voxel/: extract_voxel.cc  marching_cubes.cc  marching_cubes_lut.cc  voxel.cc
ugu/: camera.cc  camera.h  common.h  image.cc  image.h  log.cc  stb.cc  ugu_stb_image.h
ugu/renderer/: rasterizer.h  util_private.cc
ugu/sfs/: extract_voxel.cc  extract_voxel.h  voxel_carver.cc  voxel_carver.h
(+5 files in other folders)
